--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header class="showcase">
     <div class="container showcase-inner">
       <h1>Welcome to my Portfolio</h1>
-      <p class="title-subtext">My name is Michelle Rankin. I currently attend Base Camp Coding Academy, which is a trade school for software development. 
+      <p class="title-subtext">My name is Michelle Rankin. I have attend and completed Base Camp Coding Academy, which is an 11 month trade school for software development. I am now a BSI intern at C Spire. 
       </p>
     <body class="2">
     <div class="container2">
